[project]
name = "object"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
