# Simple pyproject.toml for Streamlit Cloud compatibility[project]

[build-system]name = "earthquake-monitor"

requires = ["setuptools", "wheel"]version = "2.0.0"

build-backend = "setuptools.build_meta"description = "Mobile-optimized earthquake monitoring app with modular architecture"

readme = "README.md"

[project]requires-python = ">=3.9"

name = "earthquake-simple"dependencies = [

version = "1.0.0"    # Core web framework

description = "Simple earthquake monitoring app"    "streamlit>=1.28.0",

dependencies = [    

    "streamlit>=1.28.0",    # Data processing and analysis

    "pandas>=2.0.0",    "pandas>=2.0.0",

    "numpy>=1.24.0",    "numpy>=1.24.0",

    "requests>=2.28.0",    "requests>=2.28.0",

    "plotly>=5.15.0",    

]    # Visualization

requires-python = ">=3.8"    "plotly>=5.15.0",
    
    # Development tools (optional)
    "mypy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

build = [
    "pyinstaller>=5.0.0",
]

geospatial = [
    "cartopy>=0.21.0",
    "matplotlib>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/hhamilNY/Python"
Repository = "https://github.com/hhamilNY/Python"
Documentation = "Documentation/"

[project.scripts]
earthquake-monitor = "mobile_earthquake_app_v2:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["earthquake_*", "user_session_manager", "app_config"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
