[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-simple"
version = "1.0.0"
description = "Simple earthquake monitoring app"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "plotly>=5.15.0",
]
